--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,12 +2,14 @@
     <string name="app_name">Spotify Streamer</string>
 
     <string name="content_artist_thumb">Artist thumbnail for %1$s</string>
+    <string name="content_loading">Loading…</string>
     <string name="content_results">Search results</string>
     <string name="content_search">Search for artist</string>
     <string name="content_top_ten_tracks">Top 10 Tracks</string>
 
     <string name="action_settings">Settings</string>
 
+    <string name="toast_error_no_query">Please enter an artist name</string>
     <string name="toast_error_not_online">Oops! It looks like you device is offline.</string>
     <string name="toast_error_results">Oops! There was an error searching for %1$s</string>
     <string name="toast_no_results">No results found for %1$s</string>
