--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,7 +10,7 @@
     <string name="action_settings">Settings</string>
 
     <string name="toast_error_no_query">Please enter an artist name</string>
-    <string name="toast_error_not_online">Oops! It looks like you device is offline.</string>
+    <string name="toast_error_not_online">Oops! It looks like you device is offline</string>
     <string name="toast_error_results">Oops! There was an error searching for %1$s</string>
     <string name="toast_no_results">No results found for %1$s</string>
     <string name="toast_not_implemented">This feature is not yet implemented</string>
